--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Ebrahim Hossaina</div>
+                                <div class="sub-title">Ebrahim Hossain</div>
                             </div>
                         </div>
                         <div class="row">
